--- a/dists/msvc7/queen.vcproj
+++ b/dists/msvc7/queen.vcproj
@@ -4,18 +4,40 @@
 	Version="7,00"
 	Name="queen"
 	ProjectGUID="{6A55AF61-7CA1-49E0-9385-59C1FE9D4DB7}"
-	Keyword="Win32Proj">
+	#RootNamespace="queen"
+	Keyword="Win32Proj"
+	TargetFrameworkVersion="131072"
+	>
 	<Platforms>
 		<Platform
-			Name="Win32"/>
+			Name="Win32"
+		/>
 	</Platforms>
+	<ToolFiles>
+	</ToolFiles>
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
 			OutputDirectory="queen_Debug"
 			IntermediateDirectory="queen_Debug"
 			ConfigurationType="4"
-			CharacterSet="2">
+			CharacterSet="2"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+			/>
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalOptions="/wd4201 /wd4512 /wd4511 /wd4100 /wd4121 /wd4310 /wd4706 /wd4127 /wd4189 /wd4702"
@@ -36,24 +58,36 @@
 				WarnAsError="TRUE"
 				SuppressStartupBanner="FALSE"
 				Detect64BitPortabilityProblems="FALSE"
-				DebugInformationFormat="4"/>
+				DebugInformationFormat="4"
+			/>
 			<Tool
-				Name="VCCustomBuildTool"/>
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
 			<Tool
 				Name="VCLibrarianTool"
-				OutputFile="$(OutDir)/queen.lib"/>
+				OutputFile="$(OutDir)/queen.lib"
+			/>
 			<Tool
-				Name="VCMIDLTool"/>
+				Name="VCALinkTool"
+			/>
 			<Tool
-				Name="VCPostBuildEventTool"/>
+				Name="VCXDCMakeTool"
+			/>
 			<Tool
-				Name="VCPreBuildEventTool"/>
+				Name="VCBscMakeTool"
+			/>
 			<Tool
-				Name="VCPreLinkEventTool"/>
+				Name="VCFxCopTool"
+			/>
 			<Tool
-				Name="VCResourceCompilerTool"/>
-			<Tool
-				Name="VCWebServiceProxyGeneratorTool"/>
+				Name="VCPostBuildEventTool"
+			/>
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
@@ -61,7 +95,23 @@
 			IntermediateDirectory="queen_Release"
 			ConfigurationType="4"
 			CharacterSet="2"
-			WholeProgramOptimization="TRUE">
+			WholeProgramOptimization="TRUE"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+			/>
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalOptions="/wd4201 /wd4512 /wd4511 /wd4100 /wd4121 /wd4310 /wd4706 /wd4127 /wd4189 /wd4702"
@@ -82,149 +132,204 @@
 				UsePrecompiledHeader="0"
 				WarningLevel="4"
 				WarnAsError="TRUE"
-				DebugInformationFormat="0"/>
+				DebugInformationFormat="0"
+			/>
 			<Tool
-				Name="VCCustomBuildTool"/>
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
 			<Tool
 				Name="VCLibrarianTool"
-				OutputFile="$(OutDir)/queen.lib"/>
+				OutputFile="$(OutDir)/queen.lib"
+			/>
 			<Tool
-				Name="VCMIDLTool"/>
+				Name="VCALinkTool"
+			/>
 			<Tool
-				Name="VCPostBuildEventTool"/>
+				Name="VCXDCMakeTool"
+			/>
 			<Tool
-				Name="VCPreBuildEventTool"/>
+				Name="VCBscMakeTool"
+			/>
 			<Tool
-				Name="VCPreLinkEventTool"/>
+				Name="VCFxCopTool"
+			/>
 			<Tool
-				Name="VCResourceCompilerTool"/>
-			<Tool
-				Name="VCWebServiceProxyGeneratorTool"/>
+				Name="VCPostBuildEventTool"
+			/>
 		</Configuration>
 	</Configurations>
+	<References>
+	</References>
 	<Files>
 		<File
-			RelativePath="..\..\engines\queen\bankman.cpp">
+			RelativePath="..\..\engines\queen\bankman.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\queen\bankman.h">
+			RelativePath="..\..\engines\queen\bankman.h"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\queen\command.cpp">
+			RelativePath="..\..\engines\queen\command.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\queen\command.h">
+			RelativePath="..\..\engines\queen\command.h"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\queen\credits.cpp">
+			RelativePath="..\..\engines\queen\credits.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\queen\credits.h">
+			RelativePath="..\..\engines\queen\credits.h"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\queen\cutaway.cpp">
+			RelativePath="..\..\engines\queen\cutaway.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\queen\cutaway.h">
+			RelativePath="..\..\engines\queen\cutaway.h"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\queen\debug.cpp">
+			RelativePath="..\..\engines\queen\debug.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\queen\debug.h">
+			RelativePath="..\..\engines\queen\debug.h"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\queen\defs.h">
+			RelativePath="..\..\engines\queen\defs.h"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\queen\display.cpp">
+			RelativePath="..\..\engines\queen\display.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\queen\display.h">
+			RelativePath="..\..\engines\queen\display.h"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\queen\graphics.cpp">
+			RelativePath="..\..\engines\queen\graphics.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\queen\graphics.h">
+			RelativePath="..\..\engines\queen\graphics.h"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\queen\grid.cpp">
+			RelativePath="..\..\engines\queen\grid.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\queen\grid.h">
+			RelativePath="..\..\engines\queen\grid.h"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\queen\input.cpp">
+			RelativePath="..\..\engines\queen\input.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\queen\input.h">
+			RelativePath="..\..\engines\queen\input.h"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\queen\journal.cpp">
+			RelativePath="..\..\engines\queen\journal.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\queen\journal.h">
+			RelativePath="..\..\engines\queen\journal.h"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\queen\logic.cpp">
+			RelativePath="..\..\engines\queen\logic.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\queen\logic.h">
+			RelativePath="..\..\engines\queen\logic.h"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\queen\midiadlib.cpp">
+			RelativePath="..\..\engines\queen\midiadlib.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\queen\music.cpp">
+			RelativePath="..\..\engines\queen\music.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\queen\music.h">
+			RelativePath="..\..\engines\queen\music.h"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\queen\musicdata.cpp">
+			RelativePath="..\..\engines\queen\musicdata.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\queen\queen.cpp">
+			RelativePath="..\..\engines\queen\queen.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\queen\queen.h">
+			RelativePath="..\..\engines\queen\queen.h"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\queen\resource.cpp">
+			RelativePath="..\..\engines\queen\resource.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\queen\resource.h">
+			RelativePath="..\..\engines\queen\resource.h"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\queen\restables.cpp">
+			RelativePath="..\..\engines\queen\restables.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\queen\sound.cpp">
+			RelativePath="..\..\engines\queen\sound.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\queen\sound.h">
+			RelativePath="..\..\engines\queen\sound.h"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\queen\state.cpp">
+			RelativePath="..\..\engines\queen\state.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\queen\state.h">
+			RelativePath="..\..\engines\queen\state.h"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\queen\structs.h">
+			RelativePath="..\..\engines\queen\structs.h"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\queen\talk.cpp">
+			RelativePath="..\..\engines\queen\talk.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\queen\talk.h">
+			RelativePath="..\..\engines\queen\talk.h"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\queen\walk.cpp">
+			RelativePath="..\..\engines\queen\walk.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\queen\walk.h">
+			RelativePath="..\..\engines\queen\walk.h"
+			>
 		</File>
 	</Files>
 	<Globals>
