--- a/dists/msvc7/saga.vcproj
+++ b/dists/msvc7/saga.vcproj
@@ -4,18 +4,40 @@
 	Version="7,00"
 	Name="saga"
 	ProjectGUID="{676DB4C5-9A3E-4EE1-8483-EBB79DC0700E}"
-	Keyword="Win32Proj">
+	#RootNamespace="saga"
+	Keyword="Win32Proj"
+	TargetFrameworkVersion="131072"
+	>
 	<Platforms>
 		<Platform
-			Name="Win32"/>
+			Name="Win32"
+		/>
 	</Platforms>
+	<ToolFiles>
+	</ToolFiles>
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
 			OutputDirectory="saga_Debug"
 			IntermediateDirectory="saga_Debug"
 			ConfigurationType="4"
-			CharacterSet="2">
+			CharacterSet="2"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+			/>
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalOptions="/wd4201 /wd4512 /wd4511 /wd4100 /wd4121 /wd4310 /wd4706 /wd4127 /wd4189 /wd4702"
@@ -36,24 +58,36 @@
 				WarnAsError="TRUE"
 				SuppressStartupBanner="FALSE"
 				Detect64BitPortabilityProblems="FALSE"
-				DebugInformationFormat="4"/>
+				DebugInformationFormat="4"
+			/>
 			<Tool
-				Name="VCCustomBuildTool"/>
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
 			<Tool
 				Name="VCLibrarianTool"
-				OutputFile="$(OutDir)/saga.lib"/>
+				OutputFile="$(OutDir)/saga.lib"
+			/>
 			<Tool
-				Name="VCMIDLTool"/>
+				Name="VCALinkTool"
+			/>
 			<Tool
-				Name="VCPostBuildEventTool"/>
+				Name="VCXDCMakeTool"
+			/>
 			<Tool
-				Name="VCPreBuildEventTool"/>
+				Name="VCBscMakeTool"
+			/>
 			<Tool
-				Name="VCPreLinkEventTool"/>
+				Name="VCFxCopTool"
+			/>
 			<Tool
-				Name="VCResourceCompilerTool"/>
-			<Tool
-				Name="VCWebServiceProxyGeneratorTool"/>
+				Name="VCPostBuildEventTool"
+			/>
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
@@ -61,7 +95,23 @@
 			IntermediateDirectory="saga_Release"
 			ConfigurationType="4"
 			CharacterSet="2"
-			WholeProgramOptimization="TRUE">
+			WholeProgramOptimization="TRUE"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+			/>
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalOptions="/wd4201 /wd4512 /wd4511 /wd4100 /wd4121 /wd4310 /wd4706 /wd4127 /wd4189 /wd4702"
@@ -82,209 +132,284 @@
 				UsePrecompiledHeader="0"
 				WarningLevel="4"
 				WarnAsError="TRUE"
-				DebugInformationFormat="0"/>
+				DebugInformationFormat="0"
+			/>
 			<Tool
-				Name="VCCustomBuildTool"/>
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
 			<Tool
 				Name="VCLibrarianTool"
-				OutputFile="$(OutDir)/saga.lib"/>
+				OutputFile="$(OutDir)/saga.lib"
+			/>
 			<Tool
-				Name="VCMIDLTool"/>
+				Name="VCALinkTool"
+			/>
 			<Tool
-				Name="VCPostBuildEventTool"/>
+				Name="VCXDCMakeTool"
+			/>
 			<Tool
-				Name="VCPreBuildEventTool"/>
+				Name="VCBscMakeTool"
+			/>
 			<Tool
-				Name="VCPreLinkEventTool"/>
+				Name="VCFxCopTool"
+			/>
 			<Tool
-				Name="VCResourceCompilerTool"/>
-			<Tool
-				Name="VCWebServiceProxyGeneratorTool"/>
+				Name="VCPostBuildEventTool"
+			/>
 		</Configuration>
 	</Configurations>
+	<References>
+	</References>
 	<Files>
 		<File
-			RelativePath="..\..\engines\saga\actor.cpp">
+			RelativePath="..\..\engines\saga\actor.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\actor.h">
+			RelativePath="..\..\engines\saga\actor.h"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\actor_path.cpp">
+			RelativePath="..\..\engines\saga\actor_path.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\actor_walk.cpp">
+			RelativePath="..\..\engines\saga\actor_walk.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\animation.cpp">
+			RelativePath="..\..\engines\saga\animation.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\animation.h">
+			RelativePath="..\..\engines\saga\animation.h"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\console.cpp">
+			RelativePath="..\..\engines\saga\console.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\console.h">
+			RelativePath="..\..\engines\saga\console.h"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\detection.cpp">
+			RelativePath="..\..\engines\saga\detection.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\detection_tables.h">
+			RelativePath="..\..\engines\saga\detection_tables.h"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\displayinfo.h">
+			RelativePath="..\..\engines\saga\displayinfo.h"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\events.cpp">
+			RelativePath="..\..\engines\saga\events.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\events.h">
+			RelativePath="..\..\engines\saga\events.h"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\font.cpp">
+			RelativePath="..\..\engines\saga\font.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\font.h">
+			RelativePath="..\..\engines\saga\font.h"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\font_map.cpp">
+			RelativePath="..\..\engines\saga\font_map.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\gfx.cpp">
+			RelativePath="..\..\engines\saga\gfx.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\gfx.h">
+			RelativePath="..\..\engines\saga\gfx.h"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\image.cpp">
+			RelativePath="..\..\engines\saga\image.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\input.cpp">
+			RelativePath="..\..\engines\saga\input.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\interface.cpp">
+			RelativePath="..\..\engines\saga\interface.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\interface.h">
+			RelativePath="..\..\engines\saga\interface.h"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\introproc_fta2.cpp">
+			RelativePath="..\..\engines\saga\introproc_fta2.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\introproc_ihnm.cpp">
+			RelativePath="..\..\engines\saga\introproc_ihnm.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\introproc_ite.cpp">
+			RelativePath="..\..\engines\saga\introproc_ite.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\isomap.cpp">
+			RelativePath="..\..\engines\saga\isomap.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\isomap.h">
+			RelativePath="..\..\engines\saga\isomap.h"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\itedata.cpp">
+			RelativePath="..\..\engines\saga\itedata.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\itedata.h">
+			RelativePath="..\..\engines\saga\itedata.h"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\list.h">
+			RelativePath="..\..\engines\saga\list.h"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\music.cpp">
+			RelativePath="..\..\engines\saga\music.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\music.h">
+			RelativePath="..\..\engines\saga\music.h"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\objectmap.cpp">
+			RelativePath="..\..\engines\saga\objectmap.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\objectmap.h">
+			RelativePath="..\..\engines\saga\objectmap.h"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\palanim.cpp">
+			RelativePath="..\..\engines\saga\palanim.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\palanim.h">
+			RelativePath="..\..\engines\saga\palanim.h"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\puzzle.cpp">
+			RelativePath="..\..\engines\saga\puzzle.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\puzzle.h">
+			RelativePath="..\..\engines\saga\puzzle.h"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\render.cpp">
+			RelativePath="..\..\engines\saga\render.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\render.h">
+			RelativePath="..\..\engines\saga\render.h"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\resource.cpp">
+			RelativePath="..\..\engines\saga\resource.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\resource.h">
+			RelativePath="..\..\engines\saga\resource.h"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\resource_hrs.cpp">
+			RelativePath="..\..\engines\saga\resource_hrs.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\resource_res.cpp">
+			RelativePath="..\..\engines\saga\resource_res.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\resource_rsc.cpp">
+			RelativePath="..\..\engines\saga\resource_rsc.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\saga.cpp">
+			RelativePath="..\..\engines\saga\saga.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\saga.h">
+			RelativePath="..\..\engines\saga\saga.h"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\saveload.cpp">
+			RelativePath="..\..\engines\saga\saveload.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\scene.cpp">
+			RelativePath="..\..\engines\saga\scene.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\scene.h">
+			RelativePath="..\..\engines\saga\scene.h"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\script.cpp">
+			RelativePath="..\..\engines\saga\script.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\script.h">
+			RelativePath="..\..\engines\saga\script.h"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\sfuncs.cpp">
+			RelativePath="..\..\engines\saga\sfuncs.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\sfuncs_ihnm.cpp">
+			RelativePath="..\..\engines\saga\sfuncs_ihnm.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\sndres.cpp">
+			RelativePath="..\..\engines\saga\sndres.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\sndres.h">
+			RelativePath="..\..\engines\saga\sndres.h"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\sound.cpp">
+			RelativePath="..\..\engines\saga\sound.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\sound.h">
+			RelativePath="..\..\engines\saga\sound.h"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\sprite.cpp">
+			RelativePath="..\..\engines\saga\sprite.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\sprite.h">
+			RelativePath="..\..\engines\saga\sprite.h"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\sthread.cpp">
+			RelativePath="..\..\engines\saga\sthread.cpp"
+			>
 		</File>
 	</Files>
 	<Globals>
