--- a/dists/msvc7/touche.vcproj
+++ b/dists/msvc7/touche.vcproj
@@ -4,18 +4,40 @@
 	Version="7,00"
 	Name="touche"
 	ProjectGUID="{D4986356-D0BB-4981-924A-854157BDF11F}"
-	Keyword="Win32Proj">
+	#RootNamespace="touche"
+	Keyword="Win32Proj"
+	TargetFrameworkVersion="131072"
+	>
 	<Platforms>
 		<Platform
-			Name="Win32"/>
+			Name="Win32"
+		/>
 	</Platforms>
+	<ToolFiles>
+	</ToolFiles>
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
 			OutputDirectory="touche_Debug"
 			IntermediateDirectory="touche_Debug"
 			ConfigurationType="4"
-			CharacterSet="2">
+			CharacterSet="2"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+			/>
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalOptions="/wd4201 /wd4512 /wd4511 /wd4100 /wd4121 /wd4310 /wd4706 /wd4127 /wd4189 /wd4702"
@@ -36,24 +58,36 @@
 				WarnAsError="TRUE"
 				SuppressStartupBanner="FALSE"
 				Detect64BitPortabilityProblems="FALSE"
-				DebugInformationFormat="4"/>
+				DebugInformationFormat="4"
+			/>
 			<Tool
-				Name="VCCustomBuildTool"/>
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
 			<Tool
 				Name="VCLibrarianTool"
-				OutputFile="$(OutDir)/touche.lib"/>
+				OutputFile="$(OutDir)/touche.lib"
+			/>
 			<Tool
-				Name="VCMIDLTool"/>
+				Name="VCALinkTool"
+			/>
 			<Tool
-				Name="VCPostBuildEventTool"/>
+				Name="VCXDCMakeTool"
+			/>
 			<Tool
-				Name="VCPreBuildEventTool"/>
+				Name="VCBscMakeTool"
+			/>
 			<Tool
-				Name="VCPreLinkEventTool"/>
+				Name="VCFxCopTool"
+			/>
 			<Tool
-				Name="VCResourceCompilerTool"/>
-			<Tool
-				Name="VCWebServiceProxyGeneratorTool"/>
+				Name="VCPostBuildEventTool"
+			/>
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
@@ -61,7 +95,23 @@
 			IntermediateDirectory="touche_Release"
 			ConfigurationType="4"
 			CharacterSet="2"
-			WholeProgramOptimization="TRUE">
+			WholeProgramOptimization="TRUE"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+			/>
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalOptions="/wd4201 /wd4512 /wd4511 /wd4100 /wd4121 /wd4310 /wd4706 /wd4127 /wd4189 /wd4702"
@@ -82,62 +132,88 @@
 				UsePrecompiledHeader="0"
 				WarningLevel="4"
 				WarnAsError="TRUE"
-				DebugInformationFormat="0"/>
+				DebugInformationFormat="0"
+			/>
 			<Tool
-				Name="VCCustomBuildTool"/>
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
 			<Tool
 				Name="VCLibrarianTool"
-				OutputFile="$(OutDir)/touche.lib"/>
+				OutputFile="$(OutDir)/touche.lib"
+			/>
 			<Tool
-				Name="VCMIDLTool"/>
+				Name="VCALinkTool"
+			/>
 			<Tool
-				Name="VCPostBuildEventTool"/>
+				Name="VCXDCMakeTool"
+			/>
 			<Tool
-				Name="VCPreBuildEventTool"/>
+				Name="VCBscMakeTool"
+			/>
 			<Tool
-				Name="VCPreLinkEventTool"/>
+				Name="VCFxCopTool"
+			/>
 			<Tool
-				Name="VCResourceCompilerTool"/>
-			<Tool
-				Name="VCWebServiceProxyGeneratorTool"/>
+				Name="VCPostBuildEventTool"
+			/>
 		</Configuration>
 	</Configurations>
+	<References>
+	</References>
 	<Files>
 		<File
-			RelativePath="..\..\engines\touche\detection.cpp">
+			RelativePath="..\..\engines\touche\detection.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\touche\graphics.cpp">
+			RelativePath="..\..\engines\touche\graphics.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\touche\graphics.h">
+			RelativePath="..\..\engines\touche\graphics.h"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\touche\menu.cpp">
+			RelativePath="..\..\engines\touche\menu.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\touche\midi.cpp">
+			RelativePath="..\..\engines\touche\midi.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\touche\midi.h">
+			RelativePath="..\..\engines\touche\midi.h"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\touche\opcodes.cpp">
+			RelativePath="..\..\engines\touche\opcodes.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\touche\resource.cpp">
+			RelativePath="..\..\engines\touche\resource.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\touche\saveload.cpp">
+			RelativePath="..\..\engines\touche\saveload.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\touche\staticres.cpp">
+			RelativePath="..\..\engines\touche\staticres.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\touche\touche.cpp">
+			RelativePath="..\..\engines\touche\touche.cpp"
+			>
 		</File>
 		<File
-			RelativePath="..\..\engines\touche\touche.h">
+			RelativePath="..\..\engines\touche\touche.h"
+			>
 		</File>
 	</Files>
 	<Globals>
